<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grass"
    android:orientation="vertical">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <Chronometer
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:drawableLeft="@drawable/timer"
        android:drawablePadding="2dp"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:id="@+id/score_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <EditText
                android:id="@+id/team_a"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/team_a"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif"
                android:shadowColor="@color/colorPrimaryDark"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/zero"
                android:textSize="36sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="scoreTeamA"
                android:text="@string/goal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="4"
                    android:onClick="shotTeamA"
                    android:text="@string/shot" />

                <TextView
                    android:id="@+id/team_a_shot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:shadowColor="@color/text"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/scoreText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="4"
                    android:onClick="shotOnGoalTeamA"
                    android:text="@string/shot_on_goal" />

                <TextView
                    android:id="@+id/team_a_shot_on_goal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:shadowColor="@color/text"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/scoreText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="4"
                    android:onClick="foulTeamA"
                    android:text="@string/foul" />

                <TextView
                    android:id="@+id/team_a_foul"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:shadowColor="@color/text"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/scoreText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="4"
                    android:onClick="yellowCardTeamA"
                    android:text="@string/yellow_card" />

                <TextView
                    android:id="@+id/team_a_yellow_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:shadowColor="@color/text"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/scoreText"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="4"
                    android:onClick="redCardTeamA"
                    android:text="@string/red_card" />

                <TextView
                    android:id="@+id/team_a_red_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:shadowColor="@color/text"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/scoreText"/>

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@android:color/darker_gray"></View>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingRight="8dp">

            <EditText
                android:id="@+id/team_b"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/team_b"
                android:imeOptions="actionSend"
                android:inputType="text"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif"
                android:shadowColor="@color/colorPrimaryDark"
                android:shadowDx="1"
                android:shadowDy="1"
                android:shadowRadius="2"
                android:text="@string/zero"
                android:textSize="36sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="scoreTeamB"
                android:text="@string/goal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/team_b_shot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:shadowColor="@color/text"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/scoreText"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="4"
                    android:onClick="shotTeamB"
                    android:text="@string/shot" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/team_b_shot_on_goal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:shadowColor="@color/text"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/scoreText"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="4"
                    android:onClick="shotOnGoalTeamB"
                    android:text="@string/shot_on_goal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/team_b_foul"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:shadowColor="@color/text"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/scoreText"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="4"
                    android:onClick="foulTeamB"
                    android:text="@string/foul" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/team_b_yellow_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:shadowColor="@color/text"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/scoreText"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_weight="4"
                    android:onClick="yellowCardTeamB"
                    android:text="@string/yellow_card" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/team_b_red_card"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:padding="4dp"
                    android:shadowColor="@color/text"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:text="@string/zero"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textColor="@color/scoreText"/>

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_weight="4"
                    android:onClick="redCardTeamB"
                    android:text="@string/red_card" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/live_text_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/score_table"
        android:background="#004D40"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/livetext" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"></View>

        <TextView
            android:id="@+id/live_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/live_text_table"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:onClick="resetScore"
            android:text="@string/reset" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:onClick="startMatch"
            android:text="@string/start" />
    </LinearLayout>
</RelativeLayout>
</ScrollView>